--- a/DriveLog_swift/Info.plist
+++ b/DriveLog_swift/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Drivin&apos;Photo</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -23,13 +25,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera Use Description !!!</string>
+	<string>To take photos of back camera.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Always Use Description !!!</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>When Use Description !!!</string>
+	<string>To detect taken photo&apos;s location.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>hoge</string>
+	<string>To save photos to Photo Library.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,8 +43,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
